Actually Working Phase 5

--- a/studioincloud-config.json
+++ b/studioincloud-config.json
@@ -5,6 +5,7 @@
     "phase-5-saro7696"
   ],
   "generated-ia-sdk": [
-    "/home/project/rv32i_ca"
+    "/home/project/rv32i_ca",
+    "phase-5-saro7696"
   ]
 }
